use Path.resolve()